fixed clipping problem on parallax screens

--- a/css/sass/modules/_parallax.scss
+++ b/css/sass/modules/_parallax.scss
@@ -10,7 +10,6 @@
 
 #bg-services,
 #bg-work {
-    overflow: hidden;
     height: 100%;
     background: url("../img/eggs2.jpg");
     background-size: 200%;
